--- a/src/package.json
+++ b/src/package.json
@@ -46,15 +46,15 @@
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "debug": "^2.4.5",
-    "docsify-cli": "4.2.1",
+    "docsify-cli": "^4.3.0",
     "dotenv": "^4.0.0",
     "express": "4.16.3",
     "express-jwt": "5.3.1",
     "http-status": "1.0.1",
     "joi": "10.6.0",
-    "jsonwebtoken": "7.1.9",
+    "jsonwebtoken": "^8.4.0",
     "method-override": "^2.3.10",
-    "mongoose": "4.7.4"
+    "mongoose": "^5.4.7"
   },
   "devDependencies": {
     "chai": "4.1.2",
@@ -68,7 +68,7 @@
     "eslint-watch": "2.1.14",
     "husky": "0.14.3",
     "istanbul": "1.1.0-alpha.1",
-    "mocha": "3.5.0",
+    "mocha": "^5.2.0",
     "supertest": "3.0.0",
     "supertest-as-promised": "4.0.2",
     "validate-commit-msg": "^2.14.0"
